Edit Note layout

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,12 @@
     rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin,latin-ext,vietnamese"
     rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin,latin-ext,vietnamese"
+    rel="stylesheet">
   <title>Google Keep React</title>
 </head>
 
-<body>
+<body style="background-color: rgb(232, 232, 232);">
   <!-- Display a message if JS has been disabled on the browser. -->
   <noscript>If you're seeing this message, that means
     <strong>JavaScript has been disabled on your browser</strong>, please
