Added portal for edit note

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <strong>enable JS</strong> to make this app work.</noscript>
 
   <div id="app"></div>
+  <div id="portal"></div>
 </body>
 
 </html>
